--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
                 <form id="si-calc-form">
                     <div class="input-group">
                         <label for="si-principal">Principal Amount (₹)</label>
-                        <input type="number" id="si-principal" placeholder="10000" min="0" required>
+                        <input type="number" id="si-principal" min="0" required>
                     </div>
 
                     <div class="input-group">
                         <label for="si-rate">Interest Rate (%)</label>
-                        <input type="number" id="si-rate" placeholder="7.5" step="0.01" min="0" required>
+                        <input type="number" id="si-rate" step="0.01" min="0" required>
                     </div>
 
                     <div class="input-group">
                         <label for="si-time">Time Period (Years)</label>
-                        <input type="number" id="si-time" placeholder="3" min="0" required>
+                        <input type="number" id="si-time" min="0" required>
                     </div>
 
                     <button type="submit">Calculate</button>
@@ -56,17 +56,17 @@
                 <form id="sip-calc-form">
                     <div class="input-group">
                         <label for="sip-monthly">Monthly Investment (₹)</label>
-                        <input type="number" id="sip-monthly" placeholder="5000" min="0" required>
+                        <input type="number" id="sip-monthly" min="0" required>
                     </div>
 
                     <div class="input-group">
                         <label for="sip-rate">Expected Return Rate (p.a. %)</label>
-                        <input type="number" id="sip-rate" placeholder="12" step="0.01" min="0" required>
+                        <input type="number" id="sip-rate" step="0.01" min="0" required>
                     </div>
 
                     <div class="input-group">
                         <label for="sip-time">Time Period (Years)</label>
-                        <input type="number" id="sip-time" placeholder="10" min="0" required>
+                        <input type="number" id="sip-time" min="0" required>
                     </div>
 
                     <button type="submit">Calculate</button>
