--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                         <span>Interest Amount:</span>
                         <span id="si-interest-amount">₹0.00</span>
                     </div>
+                    <div class="result-item">
+                        <span>Principal Amount:</span>
+                        <span id="si-principal-amount">₹0.00</span>
+                    </div>
                     <div class="result-item total">
                         <span>Total Amount:</span>
                         <span id="si-total-amount">₹0.00</span>
